[gd_scene load_steps=27 format=3 uid="uid://c8t6ci14xvmh"]

[ext_resource type="Texture2D" uid="uid://fhiuwh5y8kxt" path="res://assets/player/sprite_player_spaceship_up_down.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://bc3lkq4ltnkku" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://slin2nolfv5p" path="res://scenes/laser.tscn" id="2_tuyoq"]
[ext_resource type="Texture2D" uid="uid://qdani7sdt563" path="res://assets/player/sprite_player_spaceship_exhaust_high.png" id="3_dqkch"]
[ext_resource type="PackedScene" uid="uid://u3iynvpq0fko" path="res://scenes/muzzleflash.tscn" id="3_fjrip"]
[ext_resource type="PackedScene" uid="uid://u0j564qjv3d5" path="res://scenes/missle.tscn" id="4_fjrip"]
[ext_resource type="Texture2D" uid="uid://b81bc4e0sn6ji" path="res://assets/player/sprite_player_spaceship_exhaust_low.png" id="4_qlg0r"]
[ext_resource type="PackedScene" uid="uid://gjr0nf4o7uon" path="res://scenes/super.tscn" id="5_smehm"]
[ext_resource type="PackedScene" uid="uid://c0von33fj3lb" path="res://scenes/old/tracer.tscn" id="6_ur7pv"]
[ext_resource type="Shader" uid="uid://7fixflj6jaus" path="res://shaders/player.gdshader" id="8_y4r1p"]
[ext_resource type="Shader" uid="uid://dlcllfcg08ljp" path="res://shaders/playershield.gdshader" id="11_d2wvv"]
[ext_resource type="Script" uid="uid://c1waorubsugxn" path="res://scripts/shield_area.gd" id="12_3v2ag"]
[ext_resource type="Script" uid="uid://fkmp087q2e57" path="res://scripts/shield_sprite.gd" id="12_jej6c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_3vyb7")
region = Rect2(700, 0, 350, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1050, 0, 350, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(2100, 0, 350, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_ur7pv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}],
"loop": false,
"name": &"down",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": false,
"name": &"normal",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": false,
"name": &"up",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dqkch"]
radius = 21.0
height = 264.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d2wvv"]
shader = ExtResource("8_y4r1p")
shader_parameter/glow_strength = 1.5
shader_parameter/pulse_amount = 0.0
shader_parameter/time = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("3_dqkch")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("3_dqkch")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("4_qlg0r")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("4_qlg0r")
region = Rect2(64, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_d2wvv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}],
"loop": true,
"name": &"move",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}],
"loop": true,
"name": &"normal",
"speed": 15.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3v2ag"]
shader = ExtResource("11_d2wvv")
shader_parameter/shield_length = 0.25
shader_parameter/shield_radius = 0.25
shader_parameter/hit_uv = Vector2(-1, -1)
shader_parameter/hit_strength = 0.0
shader_parameter/hit_glow_radius = 0.1
shader_parameter/hit_color = Vector4(0, 0.6, 1, 1)
shader_parameter/break_strength = 0.0
shader_parameter/fragment_color = Vector4(0.5, 0.8, 1, 1)
shader_parameter/time = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jej6c"]
radius = 94.0
height = 292.0

[node name="player" type="CharacterBody2D" groups=["player", "player_body", "player_shield"]]
z_index = -10
scale = Vector2(0.5, 0.5)
collision_mask = 2
script = ExtResource("1_g2els")
bullet_scene = ExtResource("2_tuyoq")
muzzleflash_scene = ExtResource("3_fjrip")
missile_scene = ExtResource("4_fjrip")
super_scene = ExtResource("5_smehm")
tracer_scene = ExtResource("6_ur7pv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["player_body"]]
z_index = -1
sprite_frames = SubResource("SpriteFrames_ur7pv")
animation = &"down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_dqkch")

[node name="Exhaust" type="AnimatedSprite2D" parent="."]
z_index = -10
material = SubResource("ShaderMaterial_d2wvv")
position = Vector2(-165, 2)
sprite_frames = SubResource("SpriteFrames_d2wvv")
animation = &"normal"

[node name="GunPoint" type="Node2D" parent="." groups=["player_body"]]
z_index = 10
position = Vector2(50.9, 6)

[node name="MissilePoint" type="Node2D" parent="."]
position = Vector2(-17, 7)

[node name="ShieldArea" type="Area2D" parent="." groups=["player_shield"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("12_3v2ag")

[node name="ShieldSprite" type="Sprite2D" parent="ShieldArea"]
material = SubResource("ShaderMaterial_3v2ag")
scale = Vector2(12, 12)
texture = ExtResource("4_qlg0r")
script = ExtResource("12_jej6c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldArea"]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_jej6c")
